# electricity_biller

./: .gitignore  README.md  database_handler.py  main.py  pyproject.toml  requirements.txt  test.py
bills/: bill_639532_20251202_092341.txt
