[project]
name = "electricity-biller"
version = "0.1.0"
description = ""
authors = [
    {name = "yfby",email = "harveykyleybanez@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.12"
dependencies = [
    "tk (>=0.1.0,<0.2.0)",
    "reportlab (>=4.4.5,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
